# smart-medecine

./: CMakeLists.txt
backend/: package-lock.json  package.json
backend/app/api/get_status/: route.js
backend/app/api/login/: route.js
backend/app/api/medicine/add/: route.js
backend/app/api/medicine/delete/: route.js
backend/app/api/medicine/detail/: route.js
backend/app/api/medicine/edit/: route.js
backend/app/api/medicine/get_id/: route.js
backend/app/api/medicine/list/: route.js
backend/app/api/mqtt/: route.js
backend/app/api/mqtt/clear_box/: route.js
backend/app/api/mqtt/refill/: route.js
backend/app/api/mqtt/set_box/: route.js
backend/app/api/mqtt/taken/: route.js
backend/app/api/new_token/: route.js
backend/app/api/patients/add/: route.js
backend/app/api/patients/delete/: route.js
backend/app/api/patients/detail/: route.js
backend/app/api/patients/edit/: route.js
backend/app/api/patients/get_id/: route.js
backend/app/api/patients/list/: route.js
backend/app/api/signup/: route.js
iot_firmware/hardware_controller_firmware/: hardware_controller_firmware.ino
iot_firmware/network_controller_firmware/: network_controller_firmware.ino
mobile_app/: pubspec.yaml
mobile_app/android/app/src/main/: AndroidManifest.xml
mobile_app/lib/: landing_page.dart  landing_page_patient.dart  login_page.dart  main.dart
mobile_app/lib/admin/: add_drug.dart  add_user.dart  delete_drug.dart  drugs_page.dart  edit_drug.dart  edit_user.dart  home_page.dart
mobile_app/lib/user/: history_page.dart
